# text-scaling

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: YS_csv.ipynb  YS_data.ipynb  YoungSoroka.2012.Rdata
plss/: README.md  _plss_inefficient.stan  _plss_stan_inefficient.ipynb  intro.ipynb  plss.stan  plss_numpyro.ipynb  plss_scipy.py  plss_stan.ipynb  plss_ys.py  scipy_map_estimation_samples.ipynb
tbip/: tbip.ipynb  tbip_ys.ipynb
wordfish/: test_bootstrap.py  wordfish.py  wordfish.py_test.ipynb  wordfish.txt  wordfishpy_test.ipynb  wordfishpy_ys.ipynb
