[project]
name = "lss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "duckdb-engine>=0.17.0",
    "gensim>=4.3.3",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "japanize-matplotlib>=1.1.3",
    "jupysql>=0.11.1",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "numpyro>=0.19.0",
    "plotly>=6.3.0",
    "plotnine>=0.14.5",
    "pymc>=5.22.0",
    "pymysql>=1.1.1",
    "rpy2==3.5.17",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "tslearn>=0.6.3",
    "watermark>=2.5.0",
]
